--- a/Index.html
+++ b/Index.html
@@ -8,50 +8,31 @@
         <link rel="stylesheet" href="./CSS/style.css">
     </head>
 <body>
-    <div class="banner">
-        <div class="form">
-            <div class="logo">
-            <img src="./Photo/download.jpg">
-        </div>      
-            <div class="button-box">
-                <div id="btn"></div>
-               <button type="button" class="toggle-btn" onclick="login()">Log in</button>
-               <button type="button" class="toggle-btn" onclick="register()">Register</button>
-            </div>
-            <form id="login" class="input-group">
-                <input type="text" class="input-feild" placeholder="User Id" required>
-                <input type="password" class="input-feild" placeholder="Enter Password" required>
-                <input type="checkbox" class="check-box"><span>Remember me</span>
-                <button type="submit" class="submit-btn">Log in</button>
-            </form>
-            <form id="register" class="input-group">
-                <input type="text" class="input-feild" placeholder="User Id" required>
-                <input type="email" class="input-feild" placeholder="Email Id" required>
-                <input type="password" class="input-feild" placeholder="Enter Password" required>
-                <input type="checkbox" class="check-box"><span>I agree to the terms & conditions</span>
-                <button type="submit" class="submit-btn">Register</button>
-            </form>
-            <div class="social-icons">
-                <img src="./Photo/fb.png">
-                <img src="./Photo/tw.png">
-                <img src="./Photo/gp.png">
-            </div>
-        </div>
-    </div>
-    <script>
-        var x= document.getElementById("login");
-        var y= document.getElementById("register");
-        var z= document.getElementById("btn");
-        function register(){
-            x.style.left="-400px";
-            y.style.left="50px";
-            z.style.left="110px";
-        }
-        function login(){
-            x.style.left="50px";
-            y.style.left="450px";
-            z.style.left="0px";
-        }
-    </script>
+   <section>
+       <div class="imgBx">
+           <img src="./Photo/kge_logo_with_name_jpg.jpg">
+       </div>
+       <div class="contentBx">
+           <div class="formBx">
+               <h2>Login</h2>
+               <form>
+                   <div class="inputBx">
+                       <span>Username</span>
+                       <input type="text" name="">
+                   </div>
+                   <div class="inputBx">
+                    <span>Password</span>
+                    <input type="password" name="">
+                </div>
+                <div class="remember">
+                    <label><input type="checkbox" name="">Remember Me</label>
+                </div>
+                <div class="inputBx">
+                    <input type="submit" value="Sign in" name="">
+                </div>
+               </form>
+           </div>
+       </div>
+   </section>
 </body>
 </html>
