--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,11 @@
                     <label><input type="checkbox" name="">Remember Me</label>
                 </div>
                 <div class="inputBx">
-                    <input type="submit" value="Sign in" name="">
+                    <input type="submit" value="Log in" name="">
+                </div>
+                <p class="or">OR</p>
+                <div class="inputBx">
+                    <input type="button" value="Log in  with Google" name="">
                 </div>
                </form>
            </div>
