--- a/Index1.html
+++ b/Index1.html
@@ -12,192 +12,17 @@
             <hr>
             <form class="Product-detail">
                 <h3>Basic Product Details</h3>
-                <label class="l1">Product Name:</label>
                 <input type="text" class="input-feild" placeholder="Product Name" required><br>
-                <label class="l1">Product Description:</label>
-                <textarea type="text" class="input-area" placeholder="Product Description"></textarea><br>
-                <label class="l1">Product Description:</label>
+                            <textarea type="text" class="input-area" placeholder="Product Description"></textarea><br>
+            
                 <select class="input-drop">
                     <option value="brand1">Brand1</option>
                     <option value="brand2">Brand2</option>
                     <option value="brand3">Brand3</option>
                     <option value="brand4">Brand4</option>
                 </select><br>
-                <label class="l1">Product Image:</label>
-                <input type="file" class="input-feild" placeholder="Product Image" required><br>
-                <label class="l1">Product Status:</label>
-                <input type="checkbox" class="check-box"><span>[Checked means active]</span>
+                                <input type="file" class="input" placeholder="Product Image" required><br>
+                <input type="checkbox" class="check-box"><span>Product Status[Checked means active]</span>
             </form>
-            <hr>
-            <form class="Product-detail">
-                <h3>Features Product Details</h3>
-                <label class="l1">Product Features title:</label>
-                <input type="text" class="input-feild" placeholder="Product Name" required><br>
-                <label class="l1">Product Feature Description:</label>
-                <textarea type="text" class="input-area" placeholder="Product Description"></textarea><br>
-            </form>
-            <hr>
-            <form class="Product-detail">
-                <h3>Product Feature Property</h3>
-                <label class="l1">Feature1:</label>
-                <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-                <label class="l1">Feature2:</label>
-                <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-                <label class="l1">Feature3:</label>
-                <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-                <label class="l1">Feature4:</label>
-                <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-                <label class="l1">Feature5:</label>
-                <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-                <label class="l1">Feature6:</label>
-                <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-                <label class="l1">Feature7:</label>
-                <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-                <label class="l1">Feature8:</label>
-                <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-                <label class="l1">Feature8:</label>
-                <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-                <label class="l1">Feature9:</label>
-                <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-                <label class="l1">Feature10:</label>
-                <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-            </form>
-            <hr>
-            <form class="Product-detail">
-                <h3>Service Product Details</h3>
-                <label class="l1">Service title:</label>
-                <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-            </form>
-            <form class="Product-detail">
-                <h3>Service Feature</h3>
-                <label class="l1">Feature1 title:</label>
-                <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-                <label class="l1">Feature1 Img src:</label>
-                <input type="file" class="input-feild" placeholder="Product Image" required><br>
-                <label class="l1">Feature1 Img Alt:</label>
-                <input type="file" class="input-feild" placeholder="Product Image" required><br>
-                <label class="l1">Feature1 Description:</label>
-                <textarea type="text" class="input-area" placeholder="Product Description"></textarea><br>
-       </form><br>
-       <form class="Product-detail">
-        <label class="l1">Feature2 title:</label>
-        <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-        <label class="l1">Feature2 Img src:</label>
-        <input type="file" class="input-feild" placeholder="Product Image" required><br>
-        <label class="l1">Feature2 Img Alt:</label>
-        <input type="file" class="input-feild" placeholder="Product Image" required><br>
-        <label class="l1">Feature2 Description:</label>
-        <textarea type="text" class="input-area" placeholder="Product Description"></textarea><br>
-</form><br>
-<form class="Product-detail">
-    <label class="l1">Feature3 title:</label>
-    <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-    <label class="l1">Feature3 Img src:</label>
-    <input type="file" class="input-feild" placeholder="Product Image" required><br>
-    <label class="l1">Feature3 Img Alt:</label>
-    <input type="file" class="input-feild" placeholder="Product Image" required><br>
-    <label class="l1">Feature3 Description:</label>
-    <textarea type="text" class="input-area" placeholder="Product Description"></textarea><br>
-</form><br>
-<form class="Product-detail">
-    <label class="l1">Feature4 title:</label>
-    <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-    <label class="l1">Feature4 Img src:</label>
-    <input type="file" class="input-feild" placeholder="Product Image" required><br>
-    <label class="l1">Feature4 Img Alt:</label>
-    <input type="file" class="input-feild" placeholder="Product Image" required><br>
-    <label class="l1">Feature4 Description:</label>
-    <textarea type="text" class="input-area" placeholder="Product Description"></textarea><br>
-</form><br>
-<form class="Product-detail">
-    <label class="l1">Feature5 title:</label>
-    <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-    <label class="l1">Feature5 Img src:</label>
-    <input type="file" class="input-feild" placeholder="Product Image" required><br>
-    <label class="l1">Feature5 Img Alt:</label>
-    <input type="file" class="input-feild" placeholder="Product Image" required><br>
-    <label class="l1">Feature5 Description:</label>
-    <textarea type="text" class="input-area" placeholder="Product Description"></textarea><br>
-</form><br>
-<form class="Product-detail">
-    <label class="l1">Feature6 title:</label>
-    <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-    <label class="l1">Feature6 Img src:</label>
-    <input type="file" class="input-feild" placeholder="Product Image" required><br>
-    <label class="l1">Feature6 Img Alt:</label>
-    <input type="file" class="input-feild" placeholder="Product Image" required><br>
-    <label class="l1">Feature6 Description:</label>
-    <textarea type="text" class="input-area" placeholder="Product Description"></textarea><br>
-</form><br>
-<form class="Product-detail">
-    <label class="l1">Feature7 title:</label>
-    <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-    <label class="l1">Feature7 Img src:</label>
-    <input type="file" class="input-feild" placeholder="Product Image" required><br>
-    <label class="l1">Feature7 Img Alt:</label>
-    <input type="file" class="input-feild" placeholder="Product Image" required><br>
-    <label class="l1">Feature7 Description:</label>
-    <textarea type="text" class="input-area" placeholder="Product Description"></textarea><br>
-</form><br>
-<form class="Product-detail">
-    <label class="l1">Feature8 title:</label>
-    <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-    <label class="l1">Feature8 Img src:</label>
-    <input type="file" class="input-feild" placeholder="Product Image" required><br>
-    <label class="l1">Feature8 Img Alt:</label>
-    <input type="file" class="input-feild" placeholder="Product Image" required><br>
-    <label class="l1">Feature8 Description:</label>
-    <textarea type="text" class="input-area" placeholder="Product Description"></textarea><br>
-</form><br>
-<form class="Product-detail">
-    <label class="l1">Feature9 title:</label>
-    <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-    <label class="l1">Feature9 Img src:</label>
-    <input type="file" class="input-feild" placeholder="Product Image" required><br>
-    <label class="l1">Feature9 Img Alt:</label>
-    <input type="file" class="input-feild" placeholder="Product Image" required><br>
-    <label class="l1">Feature9 Description:</label>
-    <textarea type="text" class="input-area" placeholder="Product Description"></textarea><br>
-</form><br>
-<form class="Product-detail">
-    <label class="l1">Feature10 title:</label>
-    <input type="text" class="input-feild" placeholder="Product Feature Name" required><br>
-    <label class="l1">Feature10 Img src:</label>
-    <input type="file" class="input-feild" placeholder="Product Image" required><br>
-    <label class="l1">Feature10 Img Alt:</label>
-    <input type="file" class="input-feild" placeholder="Product Image" required><br>
-    <label class="l1">Feature10 Description:</label>
-    <textarea type="text" class="input-area" placeholder="Product Description"></textarea><br>
-</form>
-<hr>
-<form class="Product-detail">
-    <h3>Related Product Details</h3>
-    <label class="l1">Related Product Section title:</label>
-    <input type="text" class="input-feild" placeholder="Related Product title" required><br>
-    <label class="l1">Select Related Product:</label>
-                <input type="checkbox" class="check-box"><span>ITC[In The Canal]</span><br>
-                <input type="checkbox" class="check-box"><span>RIC[River in Canal]</span><br>
-                <input type="checkbox" class="check-box"><span>IIC[Invisible in Canal]</span><br>
-                <input type="checkbox" class="check-box"><span>CIC[Completely in Canal]</span><br>
-                <input type="checkbox" class="check-box"><span>BTE[Behind the ear ]</span>
-</form>
-<hr>
-<form class="Product-detail">
-    <h3>SEO Section</h3>
-    <label class="l1">Seo Title:</label>
-    <input type="text" class="input-feild" placeholder="seo title" required><br>
-    <label class="l1">Seo Description:</label>
-    <input type="text" class="input-feild" placeholder="seo Description" required><br>
-    <label class="l1">Social image Url:</label>
-    <input type="text" class="input-feild" placeholder="seo Img Url" required><br>
-    <label class="l1">Social image Alt Text:</label>
-    <input type="text" class="input-feild" placeholder="seo Img Alt Text" required><br>
-    <label class="l1">Seo Keyword:</label>
-    <input type="text" class="input-feild" placeholder="seo keyword" required><br>
-    <label class="l1">Seo URL:</label>
-    <input type="text" class="input-feild" placeholder="SEO URL" required><br>
-    <button type="submit" class="submit-btn">CREATE</button>
-</form>
-    </div>
     </body>
 </html>
