--- a/Index1.html
+++ b/Index1.html
@@ -14,8 +14,10 @@
             <form class="Product-detail">
                 <h3>Basic Product Details</h3>
                 <input type="text" class="input-feild" placeholder="Product Name" required><br>
-                            <textarea type="text" class="ckeditor input-area" name="content" placeholder="Product Description"></textarea><br>
+                <span>Product Description</span>
+                <textarea type="text" class="ckeditor" name="content" placeholder="Product Description"></textarea><br>
                 <select class="input-drop">
+                    <option value="brand0">Choose a Brand</option>
                     <option value="brand1">Brand1</option>
                     <option value="brand2">Brand2</option>
                     <option value="brand3">Brand3</option>
