--- a/Index1.html
+++ b/Index1.html
@@ -23,9 +23,94 @@
                     <option value="brand3">Brand3</option>
                     <option value="brand4">Brand4</option>
                 </select><br>
-                                <input type="file" class="input" placeholder="Product Image" required><br>
+                 <input type="file" class="input" placeholder="Product Image" required><br>
                 <input type="checkbox" class="check-box"><span>Product Status[Checked means active]</span>
             </form>
-            
+            <form class="Product-detail">
+                <h3 style="color:#e056fd;"> Features Product Details</h3>
+                <input type="text" class="input-feild" placeholder="Product features Title" required><br>
+                <span>Product Feature Description</span>
+                <textarea type="text" class="ckeditor" name="content" placeholder="Product Description"></textarea><br>
+            </form>
+            <form class="Product-detail">
+                <h3 style="color:#e84393;"> Product Feature Property</h3>
+                <input type="text" class="input-feild" placeholder="Product features name" required><br>
+                <input type="text" class="input-feild" placeholder="Product feature name" required><br>
+                <input type="text" class="input-feild" placeholder="Product feature name" required><br>
+                <input type="text" class="input-feild" placeholder="Product feature name" required><br>
+                <input type="text" class="input-feild" placeholder="Product feature name" required><br>
+                <input type="text" class="input-feild" placeholder="Product feature name" required><br>
+                <input type="text" class="input-feild" placeholder="Product feature name" required><br>
+                <input type="text" class="input-feild" placeholder="Product feature name" required><br>
+                <input type="text" class="input-feild" placeholder="Product feature name" required><br>
+                <input type="text" class="input-feild" placeholder="Product feature name" required><br>
+            </form>
+            <form class="Product-detail">
+                <h3 style="color:#00b894;"> Service Product Details</h3>
+                <input type="text" class="input-feild" placeholder="Product Service Title" required><br>
+            </form>
+            <form class="Product-detail">
+                <h3>Service Feature</h3>
+                <input type="text" class="input-feild" placeholder="Feature1 title" required><br>
+                <input type="file" class="input" placeholder="Feature1 Image src" required><br>
+                <input type="text" class="input-feild" placeholder="Feature1 Image alt" required><br>
+                <textarea type="text" class="ckeditor" name="content" placeholder="Feature1 Description"></textarea><br><br>
+                <input type="text" class="input-feild" placeholder="Feature2 title" required><br>
+                <input type="file" class="input" placeholder="Feature2 Image src" required><br>
+                <input type="text" class="input-feild" placeholder="Feature2 Image alt" required><br>
+                <textarea type="text" class="ckeditor" name="content" placeholder="Feature2 Description"></textarea><br><br>
+                <input type="text" class="input-feild" placeholder="Feature3 title" required><br>
+                <input type="file" class="input" placeholder="Feature3 Image src" required><br>
+                <input type="text" class="input-feild" placeholder="Feature3 Image alt" required><br>
+                <textarea type="text" class="ckeditor" name="content" placeholder="Feature3 Description"></textarea><br><br>
+                <input type="text" class="input-feild" placeholder="Feature4 title" required><br>
+                <input type="file" class="input" placeholder="Feature4 Image src" required><br>
+                <input type="text" class="input-feild" placeholder="Feature4 Image alt" required><br>
+                <textarea type="text" class="ckeditor" name="content" placeholder="Feature4 Description"></textarea><br><br>
+                <input type="text" class="input-feild" placeholder="Feature5 title" required><br>
+                <input type="file" class="input" placeholder="Feature5 Image src" required><br>
+                <input type="text" class="input-feild" placeholder="Feature5 Image alt" required><br>
+                <textarea type="text" class="ckeditor" name="content" placeholder="Feature5 Description"></textarea><br><br>
+                <input type="text" class="input-feild" placeholder="Feature6 title" required><br>
+                <input type="file" class="input" placeholder="Feature6 Image src" required><br>
+                <input type="text" class="input-feild" placeholder="Feature6 Image alt" required><br>
+                <textarea type="text" class="ckeditor" name="content" placeholder="Feature6 Description"></textarea><br><br>
+                <input type="text" class="input-feild" placeholder="Feature7 title" required><br>
+                <input type="file" class="input" placeholder="Feature7 Image src" required><br>
+                <input type="text" class="input-feild" placeholder="Feature7 Image alt" required><br>
+                <textarea type="text" class="ckeditor" name="content" placeholder="Feature7 Description"></textarea><br><br>
+                <input type="text" class="input-feild" placeholder="Feature8 title" required><br>
+                <input type="file" class="input" placeholder="Feature8 Image src" required><br>
+                <input type="text" class="input-feild" placeholder="Feature8 Image alt" required><br>
+                <textarea type="text" class="ckeditor" name="content" placeholder="Feature8 Description"></textarea><br><br>
+                <input type="text" class="input-feild" placeholder="Feature9 title" required><br>
+                <input type="file" class="input" placeholder="Feature9 Image src" required><br>
+                <input type="text" class="input-feild" placeholder="Feature9 Image alt" required><br>
+                <textarea type="text" class="ckeditor" name="content" placeholder="Feature9 Description"></textarea><br><br>
+                <input type="text" class="input-feild" placeholder="Feature10 title" required><br>
+                <input type="file" class="input" placeholder="Feature10 Image src" required><br>
+                <input type="text" class="input-feild" placeholder="Feature10 Image alt" required><br>
+                <textarea type="text" class="ckeditor" name="content" placeholder="Feature10 Description"></textarea><br>
+            </form>
+            <form class="Product-detail">
+                <h3 style="color: #74b9ff;">Related Product Details</h3>
+                <input type="text" class="input-feild" placeholder="Product Name" required><br>
+                <label class="l1" style="margin:5px;">Select Related Products</label><br>
+                <input type="checkbox" class="check-box"><span>ITC[In The Canal]</span><br>
+                <input type="checkbox" class="check-box"><span>IIC[Invisible in Canal]</span><br>
+                <input type="checkbox" class="check-box"><span>CIC[Completely in Canal]</span><br>
+                <input type="checkbox" class="check-box"><span>RIC[Receiver in Canal]</span><br>
+                <input type="checkbox" class="check-box"><span>BTE[Behind the ear]</span><br> 
+                </form>
+                <form class="Product-detail">
+                    <h3 style="color: #74b9ff;">SEO Section</h3>
+                    <input type="text" class="input-feild" placeholder="Seo Title" required><br>
+                    <input type="text" class="input-feild" placeholder="Seo Description" required><br>
+                    <input type="text" class="input-feild" placeholder="Social Image Url" required><br>
+                    <input type="text" class="input-feild" placeholder="Social Image Alt Text" required><br>
+                    <input type="text" class="input-feild" placeholder="Seo keyword" required><br>
+                    <input type="text" class="input-feild" placeholder="Seo URL" required><br>
+                    <button type="submit" class="btn">Create</button>
+                       
     </body>
 </html>
